<resources>
    <string name="app_name">QuizApp</string>
    <string name="speaker">Click on me!</string>
    <string name="question1">1. This is the sound of:</string>
    <string name="question2">2. This is the sound of:</string>
    <string name="question3">3. This is the sound of:</string>
    <string name="question4">4. This is the sound of:</string>
    <string name="question5">5. This is the sound of:</string>
    <string name="question6">6. This is the sound of:</string>
    <string name="question7">7. This is the sound of:</string>
    <string name="question8">8. This is the sound of:</string>
    <string name="question9">9. This is the sound of:</string>
    <string name="question10">10. This is the sound of:</string>
    <string name="question1_flags">1. This is the flag of which country?</string>
    <string name="question2_flags">2. This is the flag of which country?</string>
    <string name="question3_flags">3. This is the flag of which country?</string>
    <string name="question4_flags">4. This is the flag of which country?</string>
    <string name="question5_flags">5. This is the flag of which country?</string>
    <string name="question6_flags">6. This is the flag of which country?</string>
    <string name="question7_flags">7. This is the flag of which country?</string>
    <string name="question8_flags">8. This is the flag of which country?</string>
    <string name="question9_flags">9. This is the flag of which country?</string>
    <string name="question10_flags">10. This is the flag of which country?</string>
    <string name="answer_1_1_flags">POLAND</string>
    <string name="answer_1_2_flags">GERMANY</string>
    <string name="answer_1_3_flags">CANADA</string>
    <string name="answer_1_4_flags">USA</string>
    <string name="answer_2_1_flags">CANADA</string>
    <string name="answer_2_2_flags">POLAND</string>
    <string name="answer_2_3_flags">CROATIA</string>
    <string name="answer_2_4_flags">BRAZIL</string>
    <string name="answer_3_1_flags">GERMANY</string>
    <string name="answer_3_2_flags">DENMARK</string>
    <string name="answer_3_3_flags">INDIA</string>
    <string name="answer_3_4_flags">CHINA</string>
    <string name="answer_4_1_flags">UNITED KINGDOM</string>
    <string name="answer_4_2_flags">AUSTRALIA</string>
    <string name="answer_4_3_flags">USA</string>
    <string name="answer_4_4_flags">MALAYSIA</string>
    <string name="answer_5_1_flags">CHINA</string>
    <string name="answer_5_2_flags">URUGUAY</string>
    <string name="answer_5_3_flags">BELARUS</string>
    <string name="answer_5_4_flags">RUSSIA</string>
    <string name="answer_6_1_flags">SWITZERLAND</string>
    <string name="answer_6_2_flags">LIBERIA</string>
    <string name="answer_6_3_flags">GREECE</string>
    <string name="answer_6_4_flags">INDIA</string>
    <string name="answer_7_1_flags">JAPAN</string>
    <string name="answer_7_2_flags">IRAN</string>
    <string name="answer_7_3_flags">SAUDI ARABIA</string>
    <string name="answer_7_4_flags">BANGLADESH</string>
    <string name="answer_8_1_flags">HUNGARY</string>
    <string name="answer_8_2_flags">SPAIN</string>
    <string name="answer_8_3_flags">POLAND</string>
    <string name="answer_8_4_flags">MONACO</string>
    <string name="answer_9_1_flags">FRANCE</string>
    <string name="answer_9_2_flags">LATVIA</string>
    <string name="answer_9_3_flags">UNITED KINGDOM</string>
    <string name="answer_9_4_flags">ARGENTINA</string>
    <string name="answer_10_1_flags">CHINA</string>
    <string name="answer_10_2_flags">JAPAN</string>
    <string name="answer_10_3_flags">SPAIN</string>
    <string name="answer_10_4_flags">USA</string>
    <string name="answer_1_1_sounds">VIOLIN</string>
    <string name="answer_1_2_sounds">BAGPIPES</string>
    <string name="answer_1_3_sounds">PIANO</string>
    <string name="answer_1_4_sounds">GUITAR</string>
    <string name="answer_2_1_sounds">HARMONICA</string>
    <string name="answer_2_2_sounds">VIOLIN</string>
    <string name="answer_2_3_sounds">CELLO</string>
    <string name="answer_2_4_sounds">HARP</string>
    <string name="answer_3_1_sounds">TAMBOURINE</string>
    <string name="answer_3_2_sounds">LUTE</string>
    <string name="answer_3_3_sounds">MANDOLIN</string>
    <string name="answer_3_4_sounds">ACCORDION</string>
    <string name="answer_4_1_sounds">OBOE</string>
    <string name="answer_4_2_sounds">BANJO</string>
    <string name="answer_4_3_sounds">BASSOON</string>
    <string name="answer_4_4_sounds">DRUM</string>
    <string name="answer_5_1_sounds">HARMONICA</string>
    <string name="answer_5_2_sounds">CLAPPER</string>
    <string name="answer_5_3_sounds">DOUBLE BASS</string>
    <string name="answer_5_4_sounds">MARACAS</string>
    <string name="answer_6_1_sounds">PIANO</string>
    <string name="answer_6_2_sounds">KETTLEDRUMS</string>
    <string name="answer_6_3_sounds">LUTE</string>
    <string name="answer_6_4_sounds">ORGAN></string>
    <string name="answer_7_1_sounds">OCARINA</string>
    <string name="answer_7_2_sounds">TUBA</string>
    <string name="answer_7_3_sounds">TRIANGLE</string>
    <string name="answer_7_4_sounds">XYLOPHONE</string>
    <string name="answer_8_1_sounds">TRUMPET</string>
    <string name="answer_8_2_sounds">TRIANGLE</string>
    <string name="answer_8_3_sounds">DRUM</string>
    <string name="answer_8_4_sounds">VIBRAPHONE</string>
    <string name="answer_9_1_sounds">CIMBALOM</string>
    <string name="answer_9_2_sounds">GUITAR</string>
    <string name="answer_9_3_sounds">DRUM</string>
    <string name="answer_9_4_sounds">VIOLIN</string>
    <string name="answer_10_1_sounds">SAXOPHONE</string>
    <string name="answer_10_2_sounds">VIOLIN</string>
    <string name="answer_10_3_sounds">TRIANGLE</string>
    <string name="answer_10_4_sounds">VIBRAPHONE</string>
    <string name="check_results">CHECK RESULTS:</string>
    <string name="personalData">stay anonymous</string>
    <string name="type">TYPE:</string>
    <string name="yourName">YOUR NAME HERE</string>
    <string name="quiz_1">FLAG QUIZ</string>
    <string name="quiz_2">INSTRUMENT SOUND QUIZ</string>


</resources>
